Fix avatar size issue on Safari

--- a/app/styles/view-specific/creator/timeline/_timeline.scss
+++ b/app/styles/view-specific/creator/timeline/_timeline.scss
@@ -3,7 +3,7 @@
 $html-name-space:'.page-timeline';
 $header-image-height:410px;
 $header-image-height-sm:300px;
-$header-image-height-xs:250px;
+$header-image-height-xs:220px;
 $header-height:108px;
 
 #{$html-name-space} {
@@ -91,6 +91,9 @@ $header-height:108px;
         text-align:left;
         margin-bottom: 66px;
       }
+      @media (min-width:$screen-sm-min) and (max-width:$screen-md-max){
+        margin-bottom: 100px;
+      }
     }
     .creator {
       position: relative;
@@ -101,15 +104,15 @@ $header-height:108px;
         margin-top:0;
       }
       @media (min-width:$screen-s-min) {
-        width:100%;
+        width:auto;
         margin-right:-30px;
+        margin-left:30px;
         margin-top:-20px;
       }
       @media (min-width:$screen-sm-min) {
         margin-top:-35px;
       }
-      @media (min-width:$screen-lg-min + 70px) {
-        margin-top:-45px;
+      @media (min-width:($screen-lg-min + 70px)) {
         margin-right:0;
       }
     }
